test/files/neg/t1009.scala
object Foo extends Application{
  def `` = "fish"
}
